# STSchedulingSim

./: CMakeLists.txt  README.md  main.cpp  processes.cfg
Schedulers/: Proc.h  RR.h  SJF.h  Scheduler.h
